--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -2,6 +2,7 @@
   "widget": {
     "name": "Календарь заказов",
     "description": "Виджет для отображения сделок по датам заказа",
+    "short_description": "Просмотр сделок в календаре",
     "tour_description": "Просматривайте сделки, отфильтрованные по дате заказа"
   },
   "calendar": {
