--- a/i18n/en.json
+++ b/i18n/en.json
@@ -50,6 +50,7 @@
     "connection": "Server connection error"
   },
   "settings": {
-    "deal_date_field": "Order date field ID"
+    "deal_date_field": "Order date field ID",
+    "deal_date_field_id": "Field ID for order date"
   }
 }
