--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -1,55 +1,20 @@
 {
   "widget": {
     "name": "Календарь заказов",
-    "description": "Виджет для отображения сделок по датам заказа",
+    "description": "Виджет для отображения сделок по дате заказа",
     "short_description": "Просмотр сделок в календаре",
-    "tour_description": "Просматривайте сделки, отфильтрованные по дате заказа"
-  },
-  "calendar": {
-    "title": "Календарь заказов",
-    "header": {
-      "previous": "Предыдущий",
-      "next": "Следующий"
-    },
-    "weekdays": ["Пн", "Вт", "Ср", "Чт", "Пт", "Сб", "Вс"],
-    "months": [
-      "Январь",
-      "Февраль",
-      "Март",
-      "Апрель",
-      "Май",
-      "Июнь",
-      "Июль",
-      "Август",
-      "Сентябрь",
-      "Октябрь",
-      "Ноябрь",
-      "Декабрь"
-    ]
-  },
-  "deals": {
-    "list_title": "Сделки на {date}",
-    "empty": "На эту дату сделок нет",
-    "fields": {
-      "id": "ID",
-      "name": "Название",
-      "price": "Бюджет",
-      "delivery_range": "Диапазон доставки",
-      "exact_time": "К точному времени",
-      "address": "Адрес",
-      "not_specified": "Не указано"
-    }
-  },
-  "auth": {
-    "button": "Авторизоваться",
-    "message": "Для работы виджета необходимо авторизоваться",
-    "error": "Ошибка авторизации"
-  },
-  "errors": {
-    "fetch_deals": "Ошибка при получении сделок. Проверьте консоль.",
-    "connection": "Ошибка соединения с сервером"
+    "tour_description": "Просматривайте сделки, отфильтрованные по дате заказа",
+    "api_key": "API-ключ",
+    "account": "Аккаунт",
+    "language": "Язык",
+    "deal_date_field": "ID поля даты заказа",
+    "delivery_range": "ID поля диапазона доставки"
   },
   "settings": {
-    "deal_date_field": "ID поля 'Заказ на...'"
+    "api_key": "API-ключ для интеграции",
+    "account": "Поддомен аккаунта",
+    "language": "Язык интерфейса",
+    "deal_date_field": "ID кастомного поля для даты заказа",
+    "delivery_range_field": "ID кастомного поля для диапазона доставки"
   }
 }
