--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -14,7 +14,11 @@
     "api_key": "API-ключ для интеграции",
     "account": "Поддомен аккаунта",
     "language": "Язык интерфейса",
-    "deal_date_field": "ID кастомного поля для даты заказа",
+    "deal_date_field_id": "ID кастомного поля для даты заказа",
     "delivery_range_field": "ID кастомного поля для диапазона доставки"
+  },
+  "errors": {
+    "timeout": "Превышено время ожидания ответа",
+    "settings_save": "Ошибка при сохранении настроек"
   }
 }
