--- a/i18n/en.json
+++ b/i18n/en.json
@@ -8,8 +8,7 @@
     "account": "Account",
     "language": "Language",
     "deal_date_field": "Order date field ID",
-    "delivery_range": "Delivery range field ID",
-    "dummy_field": "Not used"
+    "delivery_range": "Delivery range field ID"
   },
   "settings": {
     "api_key": "API Key for integration",
