--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -5,12 +5,15 @@
     "short_description": "Просмотр сделок в календаре",
     "tour_description": "Просматривайте сделки, отфильтрованные по дате заказа",
     "advanced_settings": "Расширенные настройки",
-    "api_key": "API-ключ",
-    "refresh_interval": "Интервал обновления (мин)",
     "deal_date_field": "ID поля даты заказа",
-    "delivery_range": "ID поля диапазона доставки",
-    "field_placeholder": "Введите числовой ID поля",
-    "field_hint": "ID можно найти в настройках полей CRM"
+    "webhook_url": "URL вебхука",
+    "api_key": "API ключ",
+    "refresh_interval": "Интервал обновления (мин)",
+    "debug_mode": "Режим отладки",
+    "field_placeholder": "Введите ID поля из CRM",
+    "webhook_placeholder": "https://ваш-сервер.com/webhook",
+    "field_hint": "Найти можно в настройках полей CRM",
+    "webhook_hint": "Должен обрабатывать POST-запросы"
   },
   "errors": {
     "invalid_field": "Неверное значение поля",
