--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -3,16 +3,58 @@
     "name": "Календарь заказов",
     "description": "Виджет для отображения сделок по дате заказа",
     "short_description": "Просмотр сделок в календаре",
+    "tour_description": "Просматривайте сделки, отфильтрованные по дате заказа",
+    "api_key": "API-ключ",
+    "account": "Аккаунт",
+    "language": "Язык",
     "deal_date_field": "ID поля даты заказа",
-    "webhook_url": "URL вебхука для Digital Pipeline",
-    "field_placeholder": "Введите ID поля из CRM",
-    "webhook_placeholder": "https://ваш-сервер.com/webhook",
-    "webhook_hint": "Endpoint должен принимать POST-запросы"
+    "delivery_range": "ID поля диапазона доставки"
+  },
+  "settings": {
+    "api_key": "API-ключ для интеграции",
+    "account": "Поддомен аккаунта",
+    "language": "Язык интерфейса",
+    "deal_date_field_id": "ID кастомного поля для даты заказа",
+    "delivery_range_field": "ID кастомного поля для диапазона доставки"
   },
   "errors": {
-    "invalid_field": "Неверное значение поля",
-    "required_field": "Обязательное поле",
-    "min_value": "Минимальное значение: {min}",
-    "max_value": "Максимальное значение: {max}"
+    "timeout": "Превышено время ожидания ответа",
+    "settings_save": "Ошибка при сохранении настроек",
+    "load": "Ошибка загрузки данных",
+    "noDeals": "Нет сделок на выбранную дату",
+    "noAuth": "Требуется авторизация в amoCRM",
+    "fatal": "Критическая ошибка при загрузке виджета"
+  },
+  "labels": {
+    "dealsFor": "Сделки на",
+    "selectDate": "выберите дату",
+    "authButton": "Авторизоваться в amoCRM",
+    "today": "Сегодня",
+    "openCalendar": "Открыть календарь",
+    "save": "Сохранить",
+    "settingsTitle": "Настройки календаря заказов",
+    "prevMonth": "Предыдущий месяц",
+    "nextMonth": "Следующий месяц"
+  },
+  "months": [
+    "Январь",
+    "Февраль",
+    "Март",
+    "Апрель",
+    "Май",
+    "Июнь",
+    "Июль",
+    "Август",
+    "Сентябрь",
+    "Октябрь",
+    "Ноябрь",
+    "Декабрь"
+  ],
+  "weekdays": ["Пн", "Вт", "Ср", "Чт", "Пт", "Сб", "Вс"],
+  "statuses": {
+    "142": "Новая",
+    "143": "В работе",
+    "144": "Завершена",
+    "145": "Отменена"
   }
 }
